--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="https://www.linkedin.com/in/your-linkedin-username" target="_blank">LinkedIn</a>
+        <a href="mailto:yourmail@gmail.com">Email</a>
     </nav>
 </header>
 
@@ -101,3 +102,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
