Update LinkedIn link and email address

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
-        <a href="https://www.linkedin.com/in/your-linkedin-username" target="_blank">LinkedIn</a>
-        <a href="mailto:yourmail@gmail.com">Email</a>
+        <a href="https://www.linkedin.com/in/manisha-m16" target="_blank">LinkedIn</a>
+        <a href="mailto:manishamadan701@gmail.com">Email</a>
     </nav>
 </header>
 
@@ -102,4 +102,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
