Add clickable LinkedIn link in contact section
Updated the contact section to include a clickable LinkedIn link.

--- a/index.html
+++ b/index.html
@@ -92,9 +92,13 @@
 <section id="contact" class="section dark">
     <h3>Contact</h3>
     <p>Email: manishamadan701@gmail.com</p>
-    <p>LinkedIn: www.linkedin.com/in/manisha-m16</p>
+    <p>
+      LinkedIn:
+      <a href="https://www.linkedin.com/in/manisha-m16" target="_blank">
+        linkedin.com/in/manisha-m16
+      </a>
+    </p>
 </section>
-
 <footer>
     © 2026 Manisha | Portfolio
 </footer>
@@ -102,5 +106,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
